--- a/index.html
+++ b/index.html
@@ -47,36 +47,139 @@
     // 👉 CHALLENGE 1 - Integers
     class Integers {
       // 🧠 Constructor takes **any** number of arguments, which are integers
+      constructor(...args) {
+        this.ints = [...args];
+      }
       // 🧠 Instances have an `ints` property which is an array holding the integers above in the same order
       // 🧠 Implement a `getAll` method which returns the data held in the `ints` property
+      getAll() {
+        return this.ints;
+      }
+
       // 🧠 Implement a `getEvens` method which returns an array with the integers that are even
-      // 🧠 Implement a `getNegatives` method which returns an array with the integers that negative
+      getEvens() {
+        let result = [];
+        this.ints.forEach((element) => {
+          if (element % 2 === 0) {
+            result.push(element);
+          }
+        })
+        return result;
+      }
+
+      // 🧠 Implement a `getNegatives` method which returns an array with the integers that are negative
+      getNegatives() {
+        let result = [];
+        this.ints.forEach((element) => {
+          if (element < 0) {
+            result.push(element);
+          }
+        })
+        return result;
+      }
+
       // 🧠 Implement a `getAllSquared` method which returns an array with the integers squared
+      getAllSquared() {
+        let result = this.ints.map((element) => {
+          return element ** 2;
+        })
+        return result;
+      }
+
       // 🧠 Implement a `pop` method which removes the last integer from `ints`  and returns it
+      pop() {
+        const result = this.ints[this.ints.length - 1];
+        this.ints = this.ints.slice(0, -1);
+        return result;
+      }
+
       // 🧠 Implement a `push` method which takes an int and pushes it to the end of `ints`, and returns the updated `ints` property
+      push(int) {
+        const length = this.ints.length; 
+        this.ints[length] = int;
+        return this.ints;
+      }
+
       // 🧠 Implement a `getEveryNth` method which takes an int `n` and returns an array with the ints at position 0, n, n + n, n + n + n, etc
+      getEveryNth(int) {
+        const result_arr = [];
+        let n = 0;
+        let length = this.ints.length;
+        for (let i = 0; i < length; i++) {  // Loop through array
+          result_arr.push(this.ints[n]);    // Add the current index to the new array
+          n += int;                         // Add the desired "every other" number to the index selector
+          length -= int - 1;                // Adjust the length of the loop
+        }
+        return result_arr;
+      }
+
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
+      getAllReversed() {
+        const result_arr = [];
+        for (let i = this.ints.length - 1; i >= 0; i--) {
+          result_arr.push(this.ints[i]);
+        }
+        return result_arr;
+      }
+    }
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
       // ❗ WARNING: note that none of the methods actually mutate the `ints` property
-
-    }
+    
 
     // 👉 CHALLENGE 2 NerfGun
     class NerfGun {
       // 🧠 Constructor takes one argument: the total number of projectiles supported by the instance
-      // 🧠 New instances initialize fully loaded and with the safety on
+      constructor(n_darts) {
+
+        // 🧠 New instances initialize fully loaded and with the safety on
+        this.current_capacity = n_darts;
+        this.max_capacity = n_darts;
+        this.safety = true;
+      }
+
       // 🧠 Instances have a `shoot` method that takes no arguments:
       //      * If there is ammo left and safety is off, method consumes one projectile and returns the string "Bang!"
       //      * Shooting on empty or with the safety on, returns the string "Click!"
+      shoot() {
+        if (this.current_capacity > 0 && !this.safety) {
+          this.current_capacity--;
+          return "Bang!";
+        }
+        else if (this.safety || this.current_capacity === 0) {
+          return "Click!";
+        }
+      }
+
       // 🧠 Instances have a `reload` method that takes a number and tops up the instance by that number
       //      * Reloading returns a string in the following format: "<number> projectiles left!"
       //      * Reloading by more than capacity fills the instance to capacity
       //      * Passing an argument which is not a number larger than zero returns the string "Error reloading!"
+      reload(darts) {
+        if (!darts || darts < 1 || typeof darts !="number") {
+          return "Error reloading!";
+        }
+        this.current_capacity = this.current_capacity + darts;
+        if (this.current_capacity > this.max_capacity) {
+          this.current_capacity = this.max_capacity;
+        }
+        return `${this.current_capacity} projectiles left!`;
+      }
+
       // 🧠 Instances have a `toggleSafety` method that takes no arguments and switches the state of the safety
       //      * When engaging the safety, return "Safety enabled!"
       //      * When disengaging the safety, return "Safety disabled!"
-      // 🌟 HINT: instances need to keep track of their maximum capacity as well as their current capacity
+      toggleSafety() {
+        if (this.safety) {
+          this.safety = false;
+          return "Safety disabled!";
+        } 
+        else {
+          this.safety = true;
+          return "Safety enabled!";
+        }
+      }
 
+      // 🌟 HINT: instances need to keep track of their maximum capacity as well as their current capacity
     }
 
     // 👉 CHALLENGE 3 EBook
@@ -84,9 +187,37 @@
       // 🧠 Constructor takes two arguments:
       //      * First arg is a string with the whole text of the book
       //      * Second arg is the number of characters contained in a single page of the book
+      constructor (text, nc) {
+        this.whole_text = text;
+        this.page_length = nc;
+        this.current_page_index = 0;
+      }
+
       // 🧠 Instances have a `next` method:
       //      * It takes no args and returns the next page of the book
       //      * If the next page is empty because we have reached the end, return null instead
+      next() {   
+
+        if (this.current_page_index >= this.whole_text.length) {
+          return null;
+        }
+
+        // Define start variable 
+        let start = this.current_page_index;
+
+        // Define end variable
+        let end = start + this.page_length;
+
+        // Call slice method on whole text
+        let new_page = this.whole_text.slice(start, end);
+
+        // Update current page index with new end index;
+        this.current_page_index = end;
+
+        // Return the new page
+        return new_page;
+      }
+
       // 🧠 Example of usage:
       //    const ebook = new EBook('abcdefg', 3)
       //    ebook.next() // returns "abc"
@@ -101,18 +232,57 @@
     // 👉 CHALLENGE 4 AntFarm
     class AntFarm {
       // 🧠 Constructor takes **any** number of arguments, which are strings: the names of your ants
+      constructor(...args) {
+
       // 🧠 Instances of AntFarm have an `ants` property holding an array of ants:
       //      * Each ant is an object with a `name` prop and a `health` prop that starts at 100
+        this.ants = [];
+        for (let i = 0; i < args.length; i++) {
+          this.ants.push({name:arguments[i], health:100})
+        }
+      }
+
       // 🧠 Instances of AntFarm have a `work` method:
       //      * When invoked your ants do chores at a cost of 20 health points each
       //      * The method takes no arguments and returns the string "<ant number> ants starting work!"
       //      * If the `health` of any ant decreases to zero or below, it dies and is removed from `ants`
       //      * If `ants` contains no ants, the method returns "No ants here. Did you work them to death?"
+      work() {
+        let death_filter;
+        this.ants.forEach((ant) => {
+          ant.health -= 20;
+        });
+        let current_ants = this.ants;
+
+        death_filter = this.ants.filter((ant) => {
+          return ant.health > 0;
+        });
+        this.ants = death_filter;
+
+        if (current_ants != 0){
+          return `${current_ants.length} ants starting work!`;
+        } else {
+          return "No ants here. Did you work them to death?"
+        }
+      }
+
       // 🧠 Instances of AntFarm have a `feed` method:
       //      * The method takes as its only argument the name of the particular ant(s) to feed
       //      * When invoked, the ant(s) by the given name obtain a health increase of 15 points
       //      * The method returns the string "Yum!" if any ants by the given name exist
       //      * The method returns the string "<ant name> not found!" if no ants by the given name exist
+      feed(ant_name) {
+        let affectedAnts = this.ants.filter(ant => ant.name === ant_name);
+
+        if (affectedAnts.length === 0) {
+          return `${ant_name} not found!`;
+        } else {
+          affectedAnts.forEach(ant => {
+            ant.health += 15;
+          });
+          return "Yum!";
+        }
+      }
       // 🌟 Example:
       //      const farm = new AntFarm('Jess', 'Blake');
       //      farm.ants;         // evaluates to [{name: 'Jess', health: 100}, {name: 'Blake', health: 100}]
